RESOLVED FIXED184473
Fix availability annotations for _WKAttachment SPI
https://bugs.webkit.org/show_bug.cgi?id=184473
Summary Fix availability annotations for _WKAttachment SPI
Wenson Hsieh
Reported 2018-04-10 15:42:23 PDT
Attachments
Patch (2.08 KB, patch)
2018-04-10 15:54 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-04-10 15:54:05 PDT
Wenson Hsieh
Comment 2 2018-04-10 17:14:41 PDT
Comment on attachment 337649 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 3 2018-04-10 17:41:15 PDT
Comment on attachment 337649 [details] Patch Clearing flags on attachment: 337649 Committed r230505: <https://trac.webkit.org/changeset/230505>
WebKit Commit Bot
Comment 4 2018-04-10 17:41:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.