Fix availability annotations for _WKAttachment SPI https://bugs.webkit.org/show_bug.cgi?id=184473 <rdar://problem/39319732>

Reviewed by Dan Bernstein.

_WKAttachmentInfo is available in WK_MAC_TBA and WK_IOS_TBA, but the SPI method -[_WKAttachment requestInfo:]
is currently available in macOS 10.13.4 and iOS 11.3. Instead, the availability of this SPI should match the
availability of the SPI object it depends on.

* UIProcess/API/Cocoa/_WKAttachment.h:


Canonical link: https://commits.webkit.org/200030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230505 268f45cc-cd09-0410-ab3c-d52691b4dbfc